# super-order-automation

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .sessions.json  .stignore  AGENTS.md  DEPLOYMENT.md  DESIGN.md  GEMINI.md  README.md  cloudbuild.yaml  deploy.py  deploy_ui.py  main.py  pyproject.toml  requirements.txt
.agent/rules/: deploy.md
.codex/environments/: environment.toml
.stfolder/: syncthing-folder-be5a14.txt
data-excel/: items-including additional barcodes.xlsx  items.xlsx  only itmes with additional barcodes.xlsx  suppliers.xlsx
docs/: CLEANUP_GUIDE.md  firestore-audit.md  firestore-maintenance.md  google_auth_implementation.md  improvements_proposal.md  improvements_proposal_v2.md  prompt_review.md
frontend/: package-lock.json  package.json  tailwind.config.ts
scripts/: backfill_supplier_names.py  check_recent_orders.py  cleanup_artifacts.ps1  cleanup_artifacts.sh  debug_excel_to_csv.py  debug_extraction_v2.py  delete_items.py  firestore_audit.py  list_vertex_models.py  migrate_suppliers.py  test_model_gen.py  test_multi_order.py
scripts/tests/: run_local_pipeline.py  test_local_detector.py
src/api/: main.py
src/cloud_functions/: email_outbox_retry_fn.py  ingestion_fn.py  processor_fn.py  retry_feedback_fn.py  watch_fn.py
src/core/: events.py  exceptions.py  pipeline.py  processor.py  processor_skeleton.py
tests/: conftest.py  run_local_pipeline.py  test_ai_cost.py  test_barcode_cleaner.py  test_barcode_lookup.py  test_config_auth_settings.py  test_core_processor.py  test_dashboard_auth.py  test_dashboard_timezone.py  test_email_outbox_retry_fn.py  test_email_outbox_sender.py  test_email_outbox_service.py  test_frontend.py  test_gmail_utils.py  test_inbox.py  test_inbox_failed_events.py  test_ingestion_service.py  test_order_classification.py  test_order_session.py  test_pipeline_side_effects.py  test_processing_events_service.py  test_processor_fn.py  test_prompt_v2.py  test_validation_fix.py  test_vertex_client_init.py  test_web_api.py
tests-data/: new-items-format.xlsx  new-items-format2.xlsx  new_items_52544.xlsx  output-excel-mistake.xlsx  output-excel.xlsx
(+81 files in other folders)
